examples/test/testpolicy19261.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19261
  namespace: namespace355
spec:
  podSelector:
    matchLabels:
      key48: value4
      key49: value0
      key43: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value0
          key4: value3
          key35: value24
      podSelector:
        matchLabels:
          key42: value7
